RESOLVED FIXED163856
WebGLRenderingContextBase.texImage2D() should use a union instead of overloading
https://bugs.webkit.org/show_bug.cgi?id=163856
Summary WebGLRenderingContextBase.texImage2D() should use a union instead of overloading
Chris Dumez
Reported 2016-10-22 14:41:35 PDT
WebGLRenderingContextBase.texImage2D() should use a union instead of overloading: - https://www.khronos.org/registry/webgl/specs/latest/1.0/#5.14
Attachments
Patch (18.91 KB, patch)
2016-10-22 15:08 PDT, Chris Dumez
no flags
Darin Adler
Comment 1 2016-10-22 14:57:21 PDT
You don’t *really* have to wait. I don’t mind merging this with my exception work on the same functions.
Chris Dumez
Comment 2 2016-10-22 15:08:15 PDT
Chris Dumez
Comment 3 2016-10-22 16:31:26 PDT
Comment on attachment 292509 [details] Patch Clearing flags on attachment: 292509 Committed r207719: <http://trac.webkit.org/changeset/207719>
Chris Dumez
Comment 4 2016-10-22 16:31:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.