WebGLRenderingContextBase.texImage2D() should use a union instead of overloading https://bugs.webkit.org/show_bug.cgi?id=163856

Reviewed by Darin Adler.

WebGLRenderingContextBase.texImage2D() should use a union instead of overloading:
- https://www.khronos.org/registry/webgl/specs/latest/1.0/#5.14

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImage2D):
* html/canvas/WebGLRenderingContextBase.h:
* html/canvas/WebGLRenderingContextBase.idl:

Canonical link: https://commits.webkit.org/181597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207719 268f45cc-cd09-0410-ab3c-d52691b4dbfc